# PragmaticBlackjack

./: DOCUMENTATION  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
examples/: stateful.py
examples/test/: basic_strategy.py  classes.py  halves.py  main.py
pragmatic/: __init__.py  actions.py  controller.py  event.py  exceptions.py  handler.py  seat.py  table.py  websocket.py
pragmatic_blackjack/: __init__.py  event.py  exceptions.py  handler.py  seat.py  table.py  websocket.py
tests/: tests_pragmatic.py
