[tool.poetry]
name = "pragmatic"
version = "2.0.0"
description = "Play on Pragmatic Blackjack tables through Python."
authors = ["Zachary Hampton <69336300+ZacharyHampton@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
